# breeze

./: .gitignore  .golangci.yml  AGENTS.md  CHEATSHEET.md  FUTURE_IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  PYPI_PUBLISH.md  PYTHON_INSTALL.md  PYTHON_PACKAGE_SUMMARY.md  README.md  REVIEW_SUMMARY.md  SECURITY.md  WORKFLOW_ISSUE_RESOLUTION.md  breeze.go  breeze_test.go  build.sh  finance_tracker.go  go.mod  pyproject.toml  setup.py
.githooks/: commit-msg
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmd/breeze/: main.go
examples/: README.md  collaboration_methods_test.go  composable_collaboration_design.go  finance_tracker.go  go.mod  main.go  mathematicians.go  qwen3_mini_agents.go  songwriter.go  startup_founders.go  super_resolution.go  super_resolution_concise.go  sw_engineering_collab.go  team_development.go
examples/task_manager/: go.sum
internal/examples/funcs/: ai_doc_summarize.go  coding_team_benchmark.go  collaboration_methods_example.go.disabled  composable_collaboration_design.go  debate_competition.go  product_review_team.go  single_vs_collab_comparison.go  symbolic_integration_collab.go  team_collab_minimal.go  webapp_truck_simulation.go
issues/: 1
python/: demo.py
python/breeze/: __init__.py  breeze.py  cli.py
python/tests/: test_breeze.py
