[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breeze-ai"
version = "2.0.0"
description = "Ultra-simple local LLM interactions via Ollama"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Yossi Deutsch"}
]
keywords = ["ai", "llm", "ollama", "local", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yossideutsch1973/breeze"
Repository = "https://github.com/yossideutsch1973/breeze"
Documentation = "https://github.com/yossideutsch1973/breeze#readme"

[project.scripts]
breeze = "breeze.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
breeze = ["../breeze", "../breeze.exe"]
